Revert change