@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2026, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -125,7 +125,7 @@ abstract class UnixFileSystem
     }
 
     static List<String> standardFileAttributeViews() {
-        return List.of("basic", "posix", "unix", "owner");
+        return Arrays.asList("basic", "posix", "unix", "owner");
     }
 
     @Override
